<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pbuskell.personalizedgreeter.BeGreeted">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/strNamePlaceholder"
        android:ems="10"
        android:id="@+id/edtxtNameField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strGetGreeted"
        android:id="@+id/btnGreetMe"
        android:onClick="greetTheUser"
        android:layout_below="@+id/edtxtMidNameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtvwGreetingSpace"
        android:layout_below="@+id/btnGreetMe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strPromptQuestion"
        android:id="@+id/txtvwPrompt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtxtMidNameField"
        android:layout_below="@+id/edtxtNameField"
        android:layout_alignLeft="@+id/edtxtNameField"
        android:layout_alignStart="@+id/edtxtNameField"
        android:layout_alignRight="@+id/edtxtNameField"
        android:layout_alignEnd="@+id/edtxtNameField"
        android:text="@string/strSecondNamePlaceholder"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtxtLastNameFIeld"
        android:text="@string/strLastNamePlaceholder"
        android:layout_below="@+id/edtxtMidNameField"
        android:layout_alignLeft="@+id/edtxtMidNameField"
        android:layout_alignStart="@+id/edtxtMidNameField"
        android:layout_alignRight="@+id/edtxtMidNameField"
        android:layout_alignEnd="@+id/edtxtMidNameField"
        android:inputType="textPersonName" />
</RelativeLayout>
